--- a/service-web/src/components/loader/loader.html
+++ b/service-web/src/components/loader/loader.html
@@ -2,5 +2,5 @@
   <!--<div class="loader"></div>-->
 <!--</div>-->
 <div style="position: fixed;top: 0;width: 100%;">
-  <el-progress :percentage="percentage" :show-text="false" type="line" status="exception" :stroke-width="10" color="#000000"></el-progress>
+  <el-progress :percentage="percentage" :show-text="false" type="line" status="exception" :stroke-width="7" color="#408BC9"></el-progress>
 </div>
