Fixed calendar view

--- a/service-web/src/assets/css/common.css
+++ b/service-web/src/assets/css/common.css
@@ -255,7 +255,7 @@ body.modal-open {
 }
 
 .vCalender .c-day-background {
-  background-color: #41c9c5 !important;
+  background-color: #41c9c5;
   color: #fff;
 }
 
