--- a/service-web/src/views/Dashboard/dashboard.html
+++ b/service-web/src/views/Dashboard/dashboard.html
@@ -14,7 +14,10 @@
       </div>
       <template v-if="userChallengeStatePending && userChallengeStatePending['status']">
         <component :is="statusComponents[userChallengeStatePending['status']]"
-                   :challengeData="userChallengeStatePending" @challengeUpdated="challengeUpdated($event)"></component>
+                   :challengeData="userChallengeStatePending"
+                   :programmeData="currentProgrammeData"
+                   @challengeUpdated="challengeUpdated($event)"
+        ></component>
       </template>
       <template v-else>
         <component :is="statusComponents['NO_CHECKIN']"></component>
