--- a/service-web/src/components/challengeStates/notDone/notDone.html
+++ b/service-web/src/components/challengeStates/notDone/notDone.html
@@ -12,6 +12,7 @@
       <article class="w-100 mw7 center ph0 ph5-ns tc br2 pv3">
         <h2 class="fw4 f4 tc lh-copy mt0 mb3 navy">
           Day {{$differenceDays(challengeData['challengeDate'], (challengeData['user'] || {})['createdAt'])}} - {{challengeData['challengeDate'] | parseDate('DD/MM')}}
+          <!--Day {{indexOfCurrentChallenge}} - {{challengeData['challengeDate'] | parseDate('DD/MM')}}-->
         </h2>
         <h1 class=" b f4 f2-ns navy lh-title mt0 mb3">
           Try harder tomorrow!
