some fixes and added in templates for forget and signin

--- a/service-api/templates/emailTemplates/Welcome.html
+++ b/service-api/templates/emailTemplates/Welcome.html
@@ -1,13 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+	<meta charset="UTF-8">
+	<title>Email Check In</title>
+	<style type="text/css">
+
+		.midd-content .gradient-part {
+			width: 520px;
+			padding: 40px;
+			color: #fff;
+			margin: auto;
+			background: rgb(27, 188, 197);
+			background: -moz-linear-gradient(135deg, rgba(27, 188, 197, 1) 9%, rgba(19, 158, 208, 1) 60%);
+			background: -webkit-linear-gradient(135deg, rgba(27, 188, 197, 1) 9%, rgba(19, 158, 208, 1) 60%);
+			background: linear-gradient(135deg, rgba(27, 188, 197, 1) 9%, rgba(19, 158, 208, 1) 60%);
+			filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1bbcc5', endColorstr='#139ed0', GradientType=1);
+		}
+
+		.default-gradient-color {
+			background: rgb(27, 188, 197);
+			background: -moz-linear-gradient(135deg, rgba(27, 188, 197, 1) 9%, rgba(19, 158, 208, 1) 60%);
+			background: -webkit-linear-gradient(135deg, rgba(27, 188, 197, 1) 9%, rgba(19, 158, 208, 1) 60%);
+			background: linear-gradient(135deg, rgba(27, 188, 197, 1) 9%, rgba(19, 158, 208, 1) 60%);
+			filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1bbcc5', endColorstr='#139ed0', GradientType=1);
+		}
+
+		.border-radius-4 {
+			border-radius: 4px;
+		}
+	</style>
 </head>
-<body>
-	Hello {{name.first}} {{name.last}},
-	<br>
-	Welcome to activepathways </body>
-	<br>
-	Thanks 
+<body style="background-color: #fff;  margin: 0;  padding: 0;  font-family: 'Avenir Next';">
+<div class="wrapper" style="height: 100%;  width: 100%;  display: table;  position: absolute;">
+	<div class="midd-content" style="display: table-cell;  vertical-align: middle;">
+		<div class="gradient-part" style="padding:40px 0 0 0; width: 600px;">
+			<table width="100%" cellpadding="0" cellspacing="0">
+				<tr>
+					<td class="" width="600" align="center">
+						<table cellpadding="0" cellspacing="0" width="100%">
+							<tr>
+								<td class="column" width="100%">
+									<table width="100%" cellpadding="0" cellspacing="0">
+										<tr class="">
+											<td width="100%" align="left"
+												style="font-size: 34px; font-weight: 600; text-align: center;     padding-top: 13px; padding-bottom: 87px;">
+												Welcome to <br> Active Parthways!
+											</td>
+										</tr>
+									</table>
+								</td>
+							</tr>
+							<tr style="background-color: #fdfdfd;">
+								<td class="column" width="100%" style="padding:0 20px;">
+									<table width="100%" cellpadding="0" cellspacing="0"
+										   style=" background-color: #fff; margin: -40px 0 40px; padding:20px; border-radius: 10px; box-shadow: 0px 35px 34px 3px hsla(0, 0%, 94%, 0.78);">
+										<tr>
+											<td width="100%" align="left"
+												style="font-size: 16px; font-weight: 400; padding: 0; margin-top: 30px; color: #444444;">
+												HI {{name.first}},
+											</td>
+										</tr>
+										<tr>
+											<td width="100%" align="left"
+												style="font-size: 17px; font-weight: 200; padding-bottom: 20px; color: #7e8b9c;">
+												Welcome to Active Pathways! We are thrilled that you joined our
+												programme. You’ve made first move towards a health and happier life.
+
+											</td>
+										</tr>
+										<tr>
+											<td width="100%" align="left"
+												style="font-size: 17px; font-weight: 200; padding-bottom: 20px; color: #7e8b9c;">
+												Active Pathways is an invitation to fully live the present moment, to
+												see the world
+												around you with new eyes and discover opportunities to exercise in your
+												daily routing.
+
+											</td>
+										</tr>
+										<tr>
+											<td width="100%" align="left"
+												style="font-size: 17px; font-weight: 200; padding-bottom: 20px; color: #7e8b9c;">
+												Get ready. You start tomorrow!
+
+											</td>
+										</tr>
+										<tr>
+											<td width="100%" align="left"
+												style="font-size: 18px; font-weight: 300; padding-bottom: 5px; color: #4a4a4a;">
+												Before starting the programme,<br> we invite you to complete the
+												following
+												steps:
+											</td>
+										</tr>
+										<tr>
+											<td width="100%" align="left"
+												style="font-size: 17px; font-weight: 200; padding-top: 10px; color: #aeb7c1;">
+												<span style="text-align: center; border: 1px solid #96bfe2; color: #96bfe2; border-radius: 50%; height: 25px; width: 25px; display: inline-block;">1</span>
+												Complete our wellbeing assessment
+											</td>
+										</tr>
+										<tr>
+											<td width="100%" align="left"
+												style="font-size: 17px; font-weight: 200; padding-top: 10px; color: #aeb7c1;">
+												<span style="text-align: center; border: 1px solid #96bfe2; color: #96bfe2; border-radius: 50%; height: 25px; width: 25px; display: inline-block;">2</span>
+												Say hello in our Facebook page
+											</td>
+										</tr>
+										<tr>
+											<td width="100%" align="left"
+												style="font-size: 17px; font-weight: 200; padding-top: 10px; color: #aeb7c1;">
+												<span style="text-align: center; border: 1px solid #96bfe2; color: #96bfe2; border-radius: 50%; height: 25px; width: 25px; display: inline-block;">3</span>
+												Multiply the fun. Invite your family and friends
+											</td>
+										</tr>
+										<tr>
+											<td align="center">
+												<a style="font-size: 12px; font-weight: 300; width: 190px; display: block; padding: 12px; margin: 30px auto 50px; border-radius: 20px; text-align: center; background-color: #408bca; color: #fff;text-decoration: none;"
+												   href="https://activepathways.co">GET STARTED</a>
+											</td>
+										</tr>
+										<tr>
+											<td align="center"
+												style="border-top: 1px solid #eef3f8;">
+											</td>
+										</tr>
+										<tr>
+											<td width="100%" align="left"
+												style="font-size: 14px; font-weight: 300; text-align: center; color: #b5beca;     padding: 25px 0 20px;">
+												Thank you for joining!<br>
+												-The Active pathways Team
+											</td>
+										</tr>
+									</table>
+								</td>
+							</tr>
+						</table>
+					</td>
+				</tr>
+			</table>
+		</div>
+	</div>
+</div>
+</body>
 </html>
