--- a/service-api/templates/emailTemplates/ForgetPassword.html
+++ b/service-api/templates/emailTemplates/ForgetPassword.html
@@ -1,13 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+	<meta charset="UTF-8">
+	<title>Reset password</title>
+	<style type="text/css">
+		.midd-content .gradient-part {
+			width: 520px;
+			padding: 40px;
+			color: #fff;
+			margin: auto;
+			background: rgb(27, 188, 197);
+			background: -moz-linear-gradient(135deg, rgba(27, 188, 197, 1) 9%, rgba(19, 158, 208, 1) 60%);
+			background: -webkit-linear-gradient(135deg, rgba(27, 188, 197, 1) 9%, rgba(19, 158, 208, 1) 60%);
+			background: linear-gradient(135deg, rgba(27, 188, 197, 1) 9%, rgba(19, 158, 208, 1) 60%);
+			filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1bbcc5', endColorstr='#139ed0', GradientType=1);
+		}
+
+		.default-gradient-color {
+			background: rgb(27, 188, 197);
+			background: -moz-linear-gradient(135deg, rgba(27, 188, 197, 1) 9%, rgba(19, 158, 208, 1) 60%);
+			background: -webkit-linear-gradient(135deg, rgba(27, 188, 197, 1) 9%, rgba(19, 158, 208, 1) 60%);
+			background: linear-gradient(135deg, rgba(27, 188, 197, 1) 9%, rgba(19, 158, 208, 1) 60%);
+			filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1bbcc5', endColorstr='#139ed0', GradientType=1);
+		}
+
+		.border-radius-4 {
+			border-radius: 4px;
+		}
+
+	</style>
 </head>
-<body>
-	Hello {{name.first}} {{name.last}},
-	<br>
-	Click on link to change your password <a href="{{link}}">Click here</a> </body>
-	<br>
-	Thanks 
+<body style="background-color: #fff;  margin: 0;  padding: 0;  font-family: 'Avenir Next';">
+<div class="wrapper" style="height: 100%;  width: 100%;  display: table;  position: absolute;">
+	<div class="midd-content" style="display: table-cell;  vertical-align: middle;">
+		<div class="gradient-part">
+			<table width="100%">
+				<tr>
+					<td class="" width="600" align="center">
+						<table cellpadding="0" cellspacing="0">
+							<tr>
+								<td class="column" width="433">
+									<table>
+										<tr>
+											<td width="100%" align="left" style="font-size: 22px; font-weight: 500;">
+												HI {{name.first}}
+												<!--<span style="display: block; margin-top: 7px; font-size: 22px; font-weight: 500;">How did it go Today?</span>-->
+											</td>
+										</tr>
+									</table>
+								</td>
+								<td class="column" width="90">
+									<table>
+										<tr>
+											<td class="border-radius-4" width="78" align="right"
+												style="/*background-color: #18b3d8;*/ color: #46c3df; padding:9px 11px; font-size: 24px; font-weight: 600; text-align: center;">
+												<img src="https://activepathways.co/images/logo_tr.png" style="height: 50px;" alt="" />
+											</td>
+										</tr>
+									</table>
+								</td>
+							</tr>
+							<tr>
+								<td class="column" width="95%">
+									<table>
+										<tr>
+											<td width="100%" align="left"
+												style="font-size: 34px; font-weight: 600; padding-top: 20px; padding-bottom: 30px;">
+												Forget your password? No problem!
+											</td>
+										</tr>
+									</table>
+								</td>
+							</tr>
+							<tr>
+								<td class="column" width="100%">
+									<table>
+										<tr>
+											<td width="190" height="40" align="left" style="vertical-align: middle; text-align: center;">
+												<a href="{{link}}" style="cursor: pointer; font-size: 12px; font-weight: 300; padding: 0; margin-top: 30px; border-radius: 20px; text-align: center; background-color: #fff; color: #408bca;text-decoration: none;width: 190px;height: 40px;display: block;line-height: 40px;">
+												RESET PASSWORD
+												</a>
+											</td>
+										</tr>
+									</table>
+								</td>
+							</tr>
+							<tr>
+								<td class="column" width="100%">
+									<table>
+										<tr>
+											<td width="100%" align="left"
+												style="font-size: 15px; font-weight: 200; padding: 0; color: #fff; padding-top: 40px;">
+												-The Active pathways Team
+											</td>
+										</tr>
+									</table>
+								</td>
+							</tr>
+						</table>
+					</td>
+				</tr>
+			</table>
+		</div>
+	</div>
+</div>
+</body>
 </html>
