--- a/service-web/src/views/LandingPage/landing-page.html
+++ b/service-web/src/views/LandingPage/landing-page.html
@@ -88,7 +88,7 @@
           <p class="lh-copy-l black f5 fw5 avenir"> No sweat required - No pressure - No special equipment - Fun
             guaranteed - Join more than 2000 participants!</p>
         </div>
-        <a class="f5 link b dim br-pill ph4 mb2 mt3 dib white blue-dark-color pt2 pb2 lh-copy avenir pointer" @click.prevent="activeModal = 'signin'; openModal()">
+        <a class="f5 link b dim br-pill ph4 mb2 mt3 dib white blue-dark-color pt2 pb2 lh-copy avenir pointer" @click.prevent="activeModal = 'signup'; openModal()">
           Get started now
         </a>
       </div>
