--- a/service-web/src/views/LandingPage/landing-page.html
+++ b/service-web/src/views/LandingPage/landing-page.html
@@ -45,20 +45,20 @@
       </div>
     </div>
   </section>
-  <section class="cf center w-100 ph3 ph6-ns gradient-h" id="features">
+  <section class="cf center w-100 ph3 ph2-m ph5-l gradient-h" id="features">
     <div class="mw8 center tl bt b--lightest-blue pt4">
       <div class="cf mt0 mb5 tc">
         <div class="w-100-l avenir">
           <h1 class="f2 f1-m f1-l b white">How it works</h1>
         </div>
-        <div class="cf db w-80 w-50-l center">
-          <div class="fl w-10 w-20-m w-30-l center tr circle-whit mt2">
+        <div class="cf db w-80 w-34-l w-50-m center">
+          <div class="fl w2 circle-whit mt3 how-it-work-circle">
             <span>1</span>
-            <span>2</span>
-            <span>3</span>
+            <span class="circle-2">2</span>
+            <span class="circle-3">3</span>
             <span>4</span>
           </div>
-          <div class="fl w-90 w-80-m w-70-l numberlist tl center">
+          <div class="fl w-100 numberlist tl center">
             <ol class="avenir">
               <li class="f5 f4-m f4-l fw5 avenir">Create an account</li>
               <li class="f5 f4-m f4-l fw5 avenir">Receive a daily challenge on you your inbox</li>
@@ -67,8 +67,8 @@
             </ol>
           </div>
           <div class="cf db">
-            <div class="w-90-m w-100 w-60-l tl  center">
-              <p class="lh-copy-l f5 f4-m f4-l fw5 white w-100-l ml4 pl3 avenir"> Discover opportunities to exercise in
+            <div class="w-90-m w-100 w-90-l tl  center">
+              <p class="lh-copy-l f5 f4-m f4-l fw5 white w-100-l ml3 pl1 avenir"> Discover opportunities to exercise in
                 your daily
                 routine.
               </p>
